[FIXXED] incorrect align of navbar on mobile

--- a/styles_bootstrap.css
+++ b/styles_bootstrap.css
@@ -25,9 +25,20 @@
     
     transform: scale(1);
 }
-.hover_shadow:hover{
-    text-shadow: 1px 1px #00fde8 ;
-    box-shadow: 1px 1px rgb(89, 241, 239);
+
+.hover_shadow_registration{
+    text-shadow: 0px 0px 3px #00fde8 ;
+    box-shadow: 0px 0px 3px 1px rgb(89, 241, 239);
+}
+
+.hover_shadow_registration:hover{
+    text-shadow: 0px 0px 25px #00fde8 ;
+    box-shadow: 0px 0px 5px 2px rgb(89, 241, 239);
+}
+
+.shadow_column{
+    
+    text-shadow: 0px 0px 20px #d919ff ;
 }
 
 .border-info {
@@ -44,3 +55,9 @@
 li, h1, p,a, span,button, container-fluid, div, ul, nav, header, hr, body{
     background:local;
 } 
+
+button, a:hover{
+    color: #212529;
+    
+    
+}
